plugins {
    id 'java'
    id 'groovy'
    id 'org.springframework.boot' version '2.7.13'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'br.com.mercadolivre'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = "17"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testImplementation 'io.cucumber:cucumber-java:7.0.0'
    testImplementation 'io.cucumber:cucumber-junit:7.0.0'
    testImplementation 'com.github.tomakehurst:wiremock-jre8:2.31.0'
}


task featureTest(type: JavaExec) {
    classpath = sourceSets.test.runtimeClasspath
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'io.cucumber.core.cli.Main'
    args = ['--glue', 'br.com.mercadolivre.notificationproducersystem.steps', 'src/test/resources/features']
}

tasks.named('test') {
    useJUnitPlatform()
    systemProperty "wiremock.server.port", "8080" // Set the same port used in WireMockConfig.java
}

tasks.named('featureTest') {
    systemProperty 'org.slf4j.simpleLogger.defaultLogLevel', 'warn'
}
targetCompatibility = JavaVersion.VERSION_17

